# ros2_control_serial_diffdrive_plugin

./: CMakeLists.txt  README.md  hardware_plugin.xml  package.xml  robot_hardware.xml
include/diffdrive_arduino/: arduino_comms.h  serial_comms.h
include/ros2_control_serial_diffdrive_plugin/: config.h  fake_robot.h  ros2_control_serial_diffdrive_plugin.h  serial_comms.h  visibility.h  wheel.h
launch/: fake_robot.launch.py  test_robot.launch.py
src/: arduino_comms.cpp  diffdrive_arduino.cpp  diffdrive_robot.cpp  fake_robot.cpp  ros2_control_serial_diffdrive_plugin.cpp  serial_comms.cpp  wheel.cpp
