<?xml version="1.0"?>
<package format="2">
  <name>ros2_control_serial_diffdrive_plugin</name>
  <version>0.0.1</version>
  <description>Provides an interface between ROS2 Control and a motor driver via serial port</description>

  <maintainer email="ashemah@boostedhuman.com">Ashemah Harrison</maintainer>
  <author email="ashemah@boostedhuman.com">Ashemah Harrison</author>
  <license>BSD</license>


  <url type="repository">https://github.com/ashemah/ros2_control_serial_diffdrive_plugin</url>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>serial</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
